--- a/core/assets/bundles/bundle_ru.properties
+++ b/core/assets/bundles/bundle_ru.properties
@@ -1983,15 +1983,15 @@ block.cliff-crusher.name = Дробитель скал
 block.plasma-bore.name = Плазменный бур
 block.large-plasma-bore.name = Большой плазменный бур
 block.impact-drill.name = Ударная дрель
-block.eruption-drill.name = Eruption Drill
+block.eruption-drill.name = Взрывная дрель
 block.core-bastion.name = Ядро: «Бастион»
 block.core-citadel.name = Ядро: «Цитадель»
 block.core-acropolis.name = Ядро: «Акрополис»
 block.reinforced-container.name = Усиленный контейнер
 block.reinforced-vault.name = Укрепленное хранилище
-block.breach.name = Breach
-block.sublimate.name = Sublimate
-block.titan.name = Titan
+block.breach.name = Разрыв
+block.sublimate.name = Очищение
+block.titan.name = Титан
 block.disperse.name = Disperse
 block.fabricator.name = Fabricator
 block.tank-reconstructor.name = Tank Reconstructor
